circleci enable migrations

--- a/circle.yml
+++ b/circle.yml
@@ -24,7 +24,7 @@ dependencies:
 database:
   override:
     - mysql -u root -e 'create database test'
-#    - php artisan migrate
+    - php artisan migrate
 #    - php artisan db:seed
 
 test:
