--- a/circle.yml
+++ b/circle.yml
@@ -1,36 +1,37 @@
-defaults: &defaults
-  working_directory: ~
-  docker:
-    - image: notnoopci/php:7.1.5-browsers
-    - image: circleci/mysql:5.7
-  environment:
-    APP_ENV: testing
-    APP_KEY: base64:+59yRQt9i+0oqhDKMG5ckfrEo6eh765R9/6QvRpeQ5E=
-    DB_USERNAME: root
-    DB_PASSWORD: ''
-    DB_DATABASE: circle_test
-
+# PHP CircleCI 2.0 configuration file
+#
+# Check https://circleci.com/docs/2.0/language-php/ for more details
+#
 version: 2
 jobs:
-  build-and-test:
-    <<: *defaults
-    steps:
-      - run: sudo docker-php-ext-install pdo pdo_mysql
-      - checkout
-      - run: curl -sS https://getcomposer.org/installer | sudo php -- --install-dir=/usr/local/bin --filename=composer
-      - restore_cache:
-          key: composer-cache-{{ checksum "composer.lock" }}
-      - run: composer global require hirak/prestissimo:^0.3
-      - run: composer install -n --prefer-dist
-      - save_cache:
-          key: composer-cache-{{ checksum "composer.lock" }}
-          paths:
-            - vendor
-      - run: php artisan migrate
-      - run: php vendor/bin/phpunit
+  build:
+    docker:
+      # specify the version you desire here
+      - image: circleci/php:7.1.5-browsers
 
-workflows:
-  version: 2
-  delivery-workflow:
-    jobs:
-      - build-and-test
+      # Specify service dependencies here if necessary
+      # CircleCI maintains a library of pre-built images
+      # documented at https://circleci.com/docs/2.0/circleci-images/
+      # - image: circleci/mysql:9.4
+
+    working_directory: ~/repo
+
+    steps:
+      - checkout
+
+      # Download and cache dependencies
+      - restore_cache:
+          keys:
+          - v1-dependencies-{{ checksum "composer.json" }}
+          # fallback to using the latest cache if no exact match is found
+          - v1-dependencies-
+
+      - run: composer install -n --prefer-dist
+
+      - save_cache:
+          paths:
+            - ./vendor
+          key: v1-dependencies-{{ checksum "composer.json" }}
+
+      # run tests!
+      - run: phpunit
