--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
     "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
   },
   "devDependencies": {
-    "axios": "^0.15.3",
-    "bootstrap-sass": "^3.3.7",
-    "cross-env": "^3.2.3",
-    "jquery": "^3.1.1",
-    "laravel-mix": "0.*",
-    "lodash": "^4.17.4",
-    "vue": "^2.1.10",
+    "animate.css": "^3.5.2",
+    "axios": "^0.16.2",
+    "babel-loader": "^7.1.1",
+    "babel-plugin-transform-object-rest-spread": "^6.23.0",
+    "bulma": "^0.4.4",
+    "cross-env": "^5.0.1",
+    "laravel-mix": "^1.0",
+    "sass-loader": "^6.0.6",
+    "vue": "^2.3.4",
+    "vue-loader": "^12.2.2",
     "vue-router": "^2.7.0",
     "vuex": "^2.3.1"
   }
