--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "cross-env": "^5.0.1",
     "laravel-mix": "^1.0",
     "sass-loader": "^6.0.6",
+    "vee-validate": "^2.0.0-rc.14",
     "vue": "^2.3.4",
     "vue-loader": "^12.2.2",
     "vue-router": "^2.7.0",
