--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "vue": "^2.3.4",
     "vue-loader": "^12.2.2",
     "vue-router": "^2.7.0",
+    "vue-sweetalert": "^0.1.18",
     "vuex": "^2.3.1"
   }
 }
