--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
         "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
-        "tymon/jwt-auth": "dev-develop"
+        "tymon/jwt-auth": "1.0.0-rc.1"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
@@ -44,7 +44,6 @@
         ],
         "post-update-cmd": [
             "Illuminate\\Foundation\\ComposerScripts::postUpdate",
-            "php artisan optimize",
             "php artisan ide-helper:generate",
             "php artisan ide-helper:meta"
         ]
