--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "barryvdh/laravel-ide-helper": "v2.4.1",
         "doctrine/dbal": "v2.6.2",
         "guzzlehttp/guzzle": "^6.3",
+        "laracasts/flash": "^3.0",
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
         "tymon/jwt-auth": "1.0.0-rc.1"
