--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laracasts/flash": "^3.0",
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
+        "spatie/laravel-fractal": "^5.2",
         "tymon/jwt-auth": "1.0.0-rc.1"
     },
     "require-dev": {
