--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "vue-loader": "^12.2.2",
     "vue-router": "^2.7.0",
     "vue-sweetalert": "^0.1.18",
-    "vuex": "^2.3.1"
+    "vuex": "^2.3.1",
+    "vuex-flash": "^1.0.0"
   }
 }
