--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "laravel-mix": "^1.0",
     "sass-loader": "^6.0.6",
     "vee-validate": "^2.0.0-rc.14",
-    "vue": "^2.3.4",
+    "vue": "^2.5.2",
     "vue-loader": "^12.2.2",
+    "vue-multiselect": "^2.0.3",
     "vue-router": "^2.7.0",
     "vue-sweetalert": "^0.1.18",
+    "vue-template-compiler": "^2.5.2",
     "vuex": "^2.3.1",
     "vuex-flash": "^1.0.0"
   }
