--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "sass-loader": "^6.0.6",
     "vee-validate": "^2.0.0-rc.14",
     "vue": "^2.5.2",
+    "vue-bulma-modal": "^1.0.1",
     "vue-loader": "^12.2.2",
     "vue-multiselect": "^2.0.3",
     "vue-router": "^2.7.0",
