--- a/package.json
+++ b/package.json
@@ -18,12 +18,16 @@
     "cross-env": "^5.0.1",
     "laravel-mix": "^1.0",
     "sass-loader": "^6.0.6",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.1",
     "vee-validate": "^2.0.0-rc.14",
     "vue": "^2.5.2",
+    "vue-bulma-datepicker": "^1.3.6",
     "vue-bulma-modal": "^1.0.1",
     "vue-loader": "^12.2.2",
     "vue-multiselect": "^2.0.3",
     "vue-router": "^2.7.0",
+    "vue-style-loader": "^3.0.3",
     "vue-sweetalert": "^0.1.18",
     "vue-template-compiler": "^2.5.2",
     "vuex": "^2.3.1",
