--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "stylus-loader": "^3.0.1",
     "vee-validate": "^2.0.0-rc.14",
     "vue": "^2.5.2",
+    "vue-blu": "^0.1.9",
     "vue-bulma-datepicker": "^1.3.6",
     "vue-bulma-modal": "^1.0.1",
     "vue-loader": "^12.2.2",
