--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,6 @@
     "type": "project",
     "require": {
         "php": ">=7.0.0",
-        "barryvdh/laravel-ide-helper": "v2.4.1",
         "doctrine/dbal": "v2.6.2",
         "guzzlehttp/guzzle": "^6.3",
         "laracasts/flash": "^3.0",
@@ -16,6 +15,7 @@
         "tymon/jwt-auth": "1.0.0-rc.1"
     },
     "require-dev": {
+        "barryvdh/laravel-ide-helper": "^2.4",
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
         "phpunit/phpunit": "~6.0"
