Fix authorization header
There are no colons after the authorization type declaration

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,6 +9,7 @@ defaults: &defaults
     DB_USERNAME: root
     DB_PASSWORD: ''
     DB_DATABASE: circle_test
+    JWT_SECRET: tAv8DoT0d6wGMBWhGP8hE1GtZXKirPyJ
 
 version: 2
 jobs:
