--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.16.2",
     "babel-loader": "^7.1.1",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
+    "buefy": "^0.6.2",
     "bulma": "^0.4.4",
     "cross-env": "^5.0.1",
     "laravel-mix": "^1.0",
