--- a/package.json
+++ b/package.json
@@ -21,11 +21,15 @@
     "sass-loader": "^6.0.6",
     "vee-validate": "^2.0.0-rc.14",
     "vue": "^2.5.2",
+    "vue-bulma-datepicker": "^1.3.6",
+    "vue-bulma-datepicker2": "^1.3.7",
+    "vue-bulma-switch": "^2.0.0-alpha.3",
     "vue-loader": "^12.2.2",
-    "vue-multiselect": "^2.0.3",
+    "vue-multiselect": "^2.0.8",
     "vue-router": "^2.7.0",
     "vue-sweetalert": "^0.1.18",
     "vue-template-compiler": "^2.5.2",
+    "vuejs-datepicker": "^0.9.24",
     "vuex": "^2.3.1",
     "vuex-flash": "^1.0.0"
   }
