--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   },
   "devDependencies": {
     "animate.css": "^3.5.2",
+    "autonumeric": "^4.1.0-beta.20",
     "axios": "^0.16.2",
     "babel-loader": "^7.1.1",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
+    "babel-preset-es2015": "^6.24.1",
     "buefy": "^0.6.2",
     "bulma": "^0.4.4",
     "cross-env": "^5.0.1",
@@ -21,14 +23,14 @@
     "sass-loader": "^6.0.6",
     "vee-validate": "^2.0.0-rc.14",
     "vue": "^2.5.2",
-    "vue-bulma-datepicker": "^1.3.6",
-    "vue-bulma-datepicker2": "^1.3.7",
+    "vue-autonumeric": "^1.0.4",
     "vue-bulma-switch": "^2.0.0-alpha.3",
     "vue-loader": "^12.2.2",
     "vue-multiselect": "^2.0.8",
     "vue-router": "^2.7.0",
     "vue-sweetalert": "^0.1.18",
     "vue-template-compiler": "^2.5.2",
+    "vue2-autocomplete-js": "^0.2.2",
     "vuejs-datepicker": "^0.9.24",
     "vuex": "^2.3.1",
     "vuex-flash": "^1.0.0"
