--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laracasts/flash": "^3.0",
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
+        "league/csv": "9.x-dev",
         "spatie/laravel-fractal": "^5.2",
         "tymon/jwt-auth": "1.0.0-rc.1"
     },
