--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "vue-router": "^2.7.0",
     "vue-sweetalert": "^0.1.18",
     "vue-template-compiler": "^2.5.2",
+    "vue2-autocomplete-js": "^0.2.2",
     "vuex": "^2.3.1",
     "vuex-flash": "^1.0.0"
   }
