Makeover the dashboard

--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "buefy": "^0.6.2",
     "bulma": "^0.4.4",
+    "countup.js": "^1.9.3",
     "cross-env": "^5.0.1",
     "laravel-mix": "^1.0",
+    "moment": "^2.20.1",
     "sass-loader": "^6.0.6",
     "vee-validate": "^2.0.0-rc.14",
     "vue": "^2.5.2",
+    "vue-countup-v2": "^1.0.3",
     "vue-loader": "^12.2.2",
     "vue-multiselect": "^2.0.3",
     "vue-router": "^2.7.0",
