--- a/package.json
+++ b/package.json
@@ -24,11 +24,15 @@
     "vee-validate": "^2.0.0-rc.14",
     "vue": "^2.5.2",
     "vue-autonumeric": "^1.0.4",
+    "vue-bulma-typeahead": "0.0.7",
     "vue-loader": "^12.2.2",
     "vue-multiselect": "^2.0.3",
     "vue-router": "^2.7.0",
+    "vue-select": "^2.4.0",
     "vue-sweetalert": "^0.1.18",
     "vue-template-compiler": "^2.5.2",
+    "vue-typeahead": "^2.3.2",
+    "vue2-typeahead": "^1.0.30",
     "vuejs-datepicker": "^0.9.25",
     "vuex": "^2.3.1",
     "vuex-flash": "^1.0.0"
